genai/k8s/monitoring/loki-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki-deployment
  namespace: developmentv1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
    spec:
      containers:
        - name: loki
          image: grafana/loki:2.9.0
          args:
            - "-config.file=/etc/loki/loki-config.yaml"
          ports:
            - containerPort: 3100
          volumeMounts:
            - name: loki-config-volume
              mountPath: /etc/loki/
            - name: loki-storage-volume
              mountPath: /loki
      volumes:
        - name: loki-config-volume
          configMap:
            name: loki-config
        - name: loki-storage-volume
          emptyDir: {}
