genai/k8s/monitoring/loki-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki-service
  namespace: dev
spec:
  selector:
    app: loki
  ports:
    - protocol: TCP
      port: 3100
      targetPort: 3100
  type: ClusterIP
