genai/k8s/monitoring/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: developmentv1
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - genai-developmentv1.team-cache-me-if-you-can.student.k8s.aet.cit.tum.de
    secretName: genai-dev-tls
  rules:
  - host: genai-developmentv1.team-cache-me-if-you-can.student.k8s.aet.cit.tum.de
    http:
      paths:
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana-service
            port:
              number: 3000
